[package]
name = "sinan"
version = "0.1.0-dev"
edition = "2021"
description = "a framework for developing pluggable applications."
keywords = ["plugin-system"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/junjieprop/sinan"
rust-version = "1.68.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
sinan_internal = { path = "crates/sinan_internal", version = "0.1.0-dev", default-features = false }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[package.metadata.example.hello_world]
hidden = true