[package]
name = "sinan_plugin"
version = "0.1.0-dev"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { version = "0", optional = true }
bevy_ecs = "0.10.1"
semver = "1.0.17"

[features]
manage = ["bevy_app"]
